Alignment issue with third fieldset.

--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -691,7 +691,7 @@ main.join form.join-form fieldset:nth-of-type(3) label {
 
 main.join form.join-form fieldset:nth-of-type(3) .member-benefits-p {
     margin: 0;
-    padding: .75rem 5% 0 5%;
+    padding: .75rem 1% 0 1%;
     font-style: italic;
 }
 
